# pie-openclaw-bench

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
experiment_configs/: full_suite.json  heartbeat_all_backends.json  multiturn_all_backends.json  parameter_sweep_num_turns.json  parameter_sweep_prompt_size.json  quality_eval.json  quick_smoke_test.json  react_all_backends.json  skill_switch_all_backends.json
harness/: models.py  runner.py
harness/backends/: base.py  pie_cache.py  pie_common.py  pie_std.py  vllm.py
harness/metrics/: aggregator.py  collector.py  plots.py
harness/prompts/: __init__.py  real.py  synthetic.py
harness/quality/: evaluator.py  models.py  runner.py
harness/workloads/: base.py  heartbeat.py  multiturn.py  react.py  skill_switch.py
inferlet/: Cargo.toml  Pie.toml
inferlet-baseline/: Cargo.toml  Pie.toml
inferlet-baseline/src/: lib.rs
inferlet-test/: Cargo.toml  Pie.toml
inferlet-test/src/: lib.rs
inferlet/src/: lib.rs
inferlet/test-generate-loop/: Cargo.toml  Pie.toml
inferlet/test-generate-loop/src/: lib.rs
pod_setup/pod_setup/: pod_root_setup.sh  pod_setup.sh  pod_user_setup.sh
scripts/: cache_strategy_bench.py  prompt_capture_proxy.py
tests/: test_binary_check.py  test_integration.py  test_metrics.py  test_models.py  test_output_equivalence.py  test_pie_basic.py  test_pie_cache_logic.py  test_plots.py  test_prefix_cache.py  test_quality.py  test_real_prompts.py  test_submit_inferlets.py  test_synthetic.py  test_warmup.py  test_warmup_3pages.py  test_workloads.py
