[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-openclaw-bench"
version = "0.1.0"
description = "Benchmark infrastructure for modular KV caching on LLM serving workloads"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.24",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["harness*"]
