[package]
name = "test-generate-loop"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet = { path = "../../../pie/sdk/rust/inferlet" }
inferlet-macros = { path = "../../../pie/sdk/rust/inferlet-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
